<resources>
    <string name="app_name">Shortsight Protection</string>
    <string name="information">HelloWorld</string>
    <string name="begin_button">Begin monitoring</string>
    <string name="settings_button">Settings</string>
    <string name="information_button">Help</string>
    <string name="quit_button">Quit</string>
    <string name="demo_from_fragment">Initialization!</string>
    <string name="launch_camera">Launch Camera for recording</string>
    <string name="launch_camera_stillshot">Launch Camera for stillshot</string>
    <string name="warning">!!!TOO CLOSE!!!</string>
    <string name="retry_hint">Initialization OK, wanna retry?</string>
    <string name="retry_button">Retry</string>
    <string name="no_retry">No. Begin monitoring</string>
    <string name="permlab_sensor_enable">sensor enable</string>
    <string name="permlab_sensor_info">sensor info</string>
</resources>
